# Portal-Api

./: .dockerignore  .env.template  .env.test  .gitignore  .hadolint.yaml  AKS-Deployment.yaml  AKS-Service.yaml  AKS-hpa.yaml  Dockerfile  README.md  deployment.yaml  ingress.yaml  main.tf  outputs.tf  pyproject.toml  requirements.txt  service.yaml  variables.tf
.github/: depandabot.yml
.github/workflows/: AKS-auto-update.yml  portal-api-ci-pipeline.yml
portalapi/: app.py  feature_flags.py  flask_config.py  loggly_mttr_mttf.py  oauth.py  view_model.py
portalapi/data/: item.py  mongo_data.py  trello_data.py
portalapi/static/css/: Buttons.css  PEP-ETO.css  styles.css  tablerow.css
portalapi/templates/: error.html  index.html  layout.html
portalapi/tests/: test_Mongodb_Integration.py  test_trello_integration.py  test_unit_tests.py
