[tool.poetry]
name = "engineering"
version = "0.1.0"
description = "Engineering app Bosch Rexroth"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.5"
python-dotenv = "^0.14.0"
requests = "^2.31.0"
pytest = "^7.4.4"
pymongo = "^4.8.0"
mongomock = "^4.1.2"
setuptools = "^73.0.1"
safety = "^3.2.7"
flask-dance = "^7.1.0"
loggly-python-handler = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
