[tool.poetry]
name = "portalapi"
version = "0.1.0"
description = "Engineering Portal Api app Bosch Rexroth"
authors = []

[tool.poetry.dependencies]
python = "^3.9.2"
Flask = "^2.2.5"
python-dotenv = "^0.14.0"
requests = "^2.31.0"
pymongo = "^4.8.0"
mongomock = "^4.1.2"
setuptools = "^73.0.1"
safety = "^3.2.7"
flask-dance = "^7.1.0"
loggly-python-handler = "^1.0.1"
pip = "^23.3"
cryptography = "^44.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pip-audit = "^2.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
